[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/Player scripts/Camera2D.gd" type="Script" id=1]
[ext_resource path="res://Sprites/New Piskel.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Player scripts/KinematicBody2D.gd" type="Script" id=4]
[ext_resource path="res://Sprites/bar.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Room Scripts/menu scripts/Control.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Room Scripts/battle scripts/kill_counter.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Player scripts/high_score.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Player scripts/weapon scripts/weapon_control.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Player scripts/Upgrade_control.gd" type="Script" id=10]
[ext_resource path="res://Rooms/menu_rooms/Pause.tscn" type="PackedScene" id=11]
[ext_resource path="res://Projectile/fire/Flamethrower/light_32x32.png" type="Texture" id=12]
[ext_resource path="res://VT323-Regular.ttf" type="DynamicFontData" id=13]

[sub_resource type="CircleShape2D" id=7]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 14, 12.5 )

[sub_resource type="CircleShape2D" id=9]

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 288, 133.333, 0, 0, 0, 0, -149.248, 131.021, 0, 0, 0, 0, -362.667, 133.333, 0, 0, 0, 0, -364.924, -3.80392, 0, 0, 0, 0, -364.12, -92.1789, 0, 0, 0, 0, -364.741, -259.486, 0, 0, 0, 0, 288, -261.333, 0, 0, 0, 0, 289.007, -185.651, 0, 0, 0, 0, 288.301, -155.016, 0, 0, 0, 0, 297.069, -64.1732, 0, 0, 0, 0, 290.774, 90.8426, 0, 0, 0, 0, 288, 133.333 )
}

[sub_resource type="DynamicFont" id=8]
size = 80
outline_size = 1
font_data = ExtResource( 13 )

[sub_resource type="OccluderPolygon2D" id=10]
polygon = PoolVector2Array( -32, 0, -32, 0, -28, 20, -32, 0, -28, -20 )

[sub_resource type="Curve2D" id=11]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -448, -448, 0, 0, 0, 0, 448, -448, 0, 0, 0, 0, 448, 448, 0, 0, 0, 0, -448, 448, 0, 0, 0, 0, -448, -448 )
}

[node name="KinematicBody2D" type="KinematicBody2D" groups=["player"]]
collision_layer = 643
collision_mask = 515
script = ExtResource( 4 )

[node name="Upgrade_control" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="weapon_control" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="bulletpoint" type="Position2D" parent="weapon_control"]
position = Vector2( 35, 0 )

[node name="Area2D" type="Area2D" parent="weapon_control/bulletpoint"]
collision_layer = 513
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="weapon_control/bulletpoint/Area2D"]
shape = SubResource( 7 )

[node name="rotation" type="Position2D" parent="weapon_control"]

[node name="NewPiskel2" type="Sprite" parent="."]
position = Vector2( 0, -1 )
texture = ExtResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 4 )

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 641
collision_mask = 641

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 0, -0.5 )
shape = SubResource( 5 )

[node name="Area2D3" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( 0, -0.5 )
scale = Vector2( 45, 45 )
shape = SubResource( 9 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.2, 1.2 )
process_mode = 0
smoothing_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.02
drag_margin_top = 0.02
drag_margin_right = 0.02
drag_margin_bottom = 0.02
editor_draw_limits = true
script = ExtResource( 1 )

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( 76, 228 )
scale = Vector2( 2.2, 3.5 )
curve = SubResource( 6 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 288, 133.333 )
rotation = -3.14159
rotate = false

[node name="Position2D" type="Position2D" parent="Path2D/PathFollow2D"]
position = Vector2( -1.85709, -0.388626 )
__meta__ = {
"_gizmo_extents_": 23.7
}

[node name="CanvasLayer" type="CanvasLayer" parent="Path2D"]
pause_mode = 2

[node name="Control" type="Control" parent="Path2D/CanvasLayer"]
margin_left = 224.0
margin_top = 128.0
margin_right = 264.0
margin_bottom = 168.0
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 6 )

[node name="TextureProgress" type="TextureProgress" parent="Path2D/CanvasLayer/Control"]
margin_left = 448.0
margin_top = 416.0
margin_right = 704.0
margin_bottom = 456.0
step = 0.01
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 0.819608, 0.180392, 0.113725, 1 )

[node name="TextureProgress2" type="TextureProgress" parent="Path2D/CanvasLayer/Control"]
margin_left = 448.0
margin_top = 352.0
margin_right = 704.0
margin_bottom = 392.0
step = 0.01
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 0.392157, 0.847059, 0.231373, 1 )

[node name="SWARM_warning" type="Label" parent="Path2D/CanvasLayer/Control"]
margin_left = -1184.0
margin_top = -808.0
margin_right = -1024.0
margin_bottom = -728.0
rect_scale = Vector2( 1.71749, 1.71749 )
custom_colors/font_color = Color( 0.507813, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_constants/shadow_offset_x = -1
custom_constants/shadow_offset_y = -3
custom_fonts/font = SubResource( 8 )
text = "SWARM"
align = 2

[node name="kill_counter" type="Label" parent="Path2D/CanvasLayer"]
margin_left = 448.0
margin_top = 216.0
margin_right = 576.0
margin_bottom = 271.0
script = ExtResource( 7 )

[node name="high_score" type="Label" parent="Path2D/CanvasLayer"]
margin_left = 448.0
margin_top = 248.0
margin_right = 576.0
margin_bottom = 303.0
script = ExtResource( 8 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 16, 16 )
texture = ExtResource( 12 )
energy = 1.2
shadow_enabled = true
shadow_gradient_length = 0.1

[node name="Light2D2" type="Light2D" parent="."]
light_mask = 32
scale = Vector2( 4, 4 )
texture = ExtResource( 12 )
energy = 0.6
shadow_gradient_length = 2.0

[node name="CanvasLayer" parent="." instance=ExtResource( 11 )]

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( 8, 0 )
occluder = SubResource( 10 )

[node name="Path2D2_special" type="Path2D" parent="."]
curve = SubResource( 11 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D2_special"]
position = Vector2( -448, -448 )
rotation = -3.14159
rotate = false

[node name="Position2D" type="Position2D" parent="Path2D2_special/PathFollow2D"]
position = Vector2( -1.85709, -0.388626 )

[connection signal="camera_zoom" from="." to="Camera2D" method="_on_KinematicBody2D_camera_zoom"]
[connection signal="camera_zoom_out" from="." to="Camera2D" method="_on_KinematicBody2D_camera_zoom_out"]
[connection signal="damage_taken" from="." to="Path2D/CanvasLayer/Control" method="_on_KinematicBody2D_damage_taken"]
[connection signal="player_death" from="." to="Path2D/CanvasLayer/kill_counter" method="_on_KinematicBody2D_player_death"]
[connection signal="player_death" from="." to="Path2D/CanvasLayer/high_score" method="_on_KinematicBody2D_player_death"]
[connection signal="player_rotation" from="." to="weapon_control" method="_on_KinematicBody2D_player_rotation"]
[connection signal="stamina_change" from="." to="weapon_control" method="_on_KinematicBody2D_stamina_change"]
[connection signal="stamina_change" from="." to="Path2D/CanvasLayer/Control" method="_on_KinematicBody2D_stamina_change"]
[connection signal="body_entered" from="weapon_control/bulletpoint/Area2D" to="weapon_control" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="Area2D3" to="." method="_on_Area2D3_body_entered"]
